Slider de só afegit

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                 stop
             </span>
         </a>
+
+        <!-- Farem un slider per a modificar el volum de l'audio -->
+        <input type="range" min="0" max="1" step="0.01" value="1" oninput="audio.volume = this.value;">
     </div>
     <!-- Recordeu que heu de seguir les lleis en matèria de propietat intelectual.
          En aquest cas, cal nomenar i enllaçar l'autor i el tipus de llicència. 
